Notes: Updated the testing/1.01 index notes

--- a/testing/1.01/index.html
+++ b/testing/1.01/index.html
@@ -11,9 +11,9 @@
 		<ul>
 			<li>The Html5 object should be an abstract class, remove the __construct, move the functionality to Html5Document</li>
 			<li>Html5Document should be the only of the existing classes directly extending the Html5 object</li>
-			<li>Html5DocumentHead should extend the Html5Document class</li>
+			<li>Html5DocumentHead and Html5DocumentFragment should extend the Html5Document class</li>
 			<li>Consider the option of adding an Html5DocumentBody object; what are the benefits? Prefabricate pages?</li>
-			<li>Consider the option of adding an Html5DocumentNode object, extends Html5, parent to Element and Fragment</li>
+			<li>Consider the option of adding an Html5DocumentNode object, extends Html5, parent to Element and Fragment?</li>
 			<li>Consider the option of adding an Html5Config object to manage the initial configuration as an object</li>
 		</ul>
 	</section>
