Note: Invoke search via Html5 object, or as a standalone instance

--- a/testing/1.02/index.html
+++ b/testing/1.02/index.html
@@ -12,6 +12,7 @@
 			<li>The method to find or search will invoke an instance of a new object, ie Html5Search</li>
 			<li>The search object will generate a list of nodes that match the provided constructor</li>
 			<li>The list object will provide access to common methods for node manipulation, ie: append</li>
+			<li>The search should be able to be invoked internal to an Html5 object, or as a standalone instance</li>
 		</ul>
 	</section>
 </article>
