Note: Html5Construct must not assume a nodeName when deconstructing find

--- a/testing/1.02/index.html
+++ b/testing/1.02/index.html
@@ -13,6 +13,7 @@
 			<li>The search object will generate a list of nodes that match the provided constructor</li>
 			<li>The list object will provide access to common methods for node manipulation, ie: append</li>
 			<li>The search should be able to be invoked internal to an Html5 object, or as a standalone instance</li>
+			<li>The Html5Construct will require the ability to suppress assuming a default nodeName, currently &lt;div&gt;</li>
 		</ul>
 	</section>
 </article>
