Note: Require the ability to exclude search results via construct

--- a/testing/1.02/index.html
+++ b/testing/1.02/index.html
@@ -14,6 +14,7 @@
 			<li>The list object will provide access to common methods for node manipulation, ie: append</li>
 			<li>The search should be able to be invoked internal to an Html5 object, or as a standalone instance</li>
 			<li>The Html5Construct will require the ability to suppress assuming a default nodeName, currently &lt;div&gt;</li>
+			<li>Require the ability to exclude results via construct argument; Html5Search::find()->not() method</li>
 		</ul>
 	</section>
 </article>
