Note: Require ability to chain find methods to narrow discovered results

--- a/testing/1.02/index.html
+++ b/testing/1.02/index.html
@@ -15,6 +15,7 @@
 			<li>The search should be able to be invoked internal to an Html5 object, or as a standalone instance</li>
 			<li>The Html5Construct will require the ability to suppress assuming a default nodeName, currently &lt;div&gt;</li>
 			<li>Require the ability to exclude results via construct argument; Html5Search::find()->not() method</li>
+			<li>Require the ability to chain find methods to narrow discovered results</li>
 		</ul>
 	</section>
 </article>
