Note: Test requirements by importing/exporting existing test index files

--- a/testing/1.03/index.html
+++ b/testing/1.03/index.html
@@ -12,7 +12,8 @@
 			<li>Require the ability to load a file into the Html5Document or Html5Fragment</li>
 			<li>Require the ability to generate a document skeleton by assembling a document from multiple organized fragments</li>
 			<li>Require the ability to specify a root export location in the filesystem</li>
-			<li>Require the abilily to name a document or fragment in order to export as well organized views</li>
+			<li>Require the abilily to name a document or fragment in order to export as well organized view file-names</li>
+			<li>Test these requirements by importing/exporting existing testing index files</li>
 		</ul>
 	</section>
 </article>
