Note: Ability to loadFile via the config as object instance is created

--- a/testing/1.03/index.html
+++ b/testing/1.03/index.html
@@ -14,6 +14,7 @@
 			<li>Require the ability to specify a root export location in the filesystem</li>
 			<li>Require the abilily to name a document or fragment in order to export as well organized view file-names</li>
 			<li>Test these requirements by importing/exporting existing testing index files</li>
+			<li>Ability to interrupt the normal implement and load a file via the config as an instance is created</li>
 		</ul>
 	</section>
 </article>
